...
    <string name="gear_search_autocomplete_label">Enter the gear you used</string>
    <string name="gear_search_no_matches_found">No matching gear types found</string>
    <string name="gear_selection_error">Select a gear type or choose one from the list</string>
    <string name="gear_measurement_title">Enter the measurements for %1$s</string>
    <string name="gear_measurement_title_fallback">Enter the measurements for this gear</string>
    <string name="gear_measurement_missing_gear_type">Unable to load this gear\'s measurements. Please go back and select the gear again.</string>
    <string name="gear_measurement_whole_number_instruction">All gear measurements must be whole numbers.</string>
    <string name="gear_measurement_field_mesh_size_mm">Mesh size (mm)</string>
    <string name="gear_measurement_field_number_of_trawl_nets">Number of trawl nets</string>
    <string name="gear_measurement_field_total_pots_or_traps_hauled">Total pots or traps hauled</string>
    <string name="gear_measurement_field_total_pots_or_traps_left_in_water">Total pots or traps left in water</string>
    <string name="gear_measurement_field_number_of_rods_and_lines">Number of rods and lines</string>
    <string name="gear_measurement_field_total_hooks_hauled">Total hooks hauled</string>
...
